2010-10-11  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: One more SMBIOS version fix-up case.
	* Makefile: Rework BSD make compatibility trick. The previous
	  trick would break GNU make 3.82.

2010-09-29  Anton Arapov  <anton@redhat.com>

	* util.c: makes dmidecode fall back to regular reads if the mmap
	  fails. Patch from Olof Johansson.

2010-09-21  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix Xeon 7xxx entries in CPU name lookup table
	  (DMI type 4). Patch from Paul Flo Williams.

2009-08-28  Jarod Wilson  <jarod@redhat.com>

	Update to support SMBIOS specification version 2.6.1.

	* dmidecode.c: Add processor types "Dual-Core Xeon 5200",
	  "Dual-Core Xeon 7200", "Quad-Core Xeon 7300", "QuadCore Xeon 7400",
	  "Multi-Core Xeon 7400", "Core i7", "Dual-Core Celeron",
	  "Multi-Core Xeon", "Dual-Core Xeon 3xxx", "Quad-Core Xeon 3xxx",
	  "Dual-Core Xeon 5xxx", "Quad-Core Xeon 5xxx", "Dual-Core Xeon 7xxx",
	  "Quad-Core Xeon 7xxx" and "Multi-Core Xeon 7xxx" (DMI type 4).
	* dmidecode.c: Add slot types "PCI Express Gen 2 x1",
	  "PCI Express Gen 2 x2", "PCI Express Gen 2 x4",
	  "PCI Express Gen 2 x8" and "PCI Express Gen 2 x16" (DMI type 9).
	* dmidecode.c: Add memory device types "DDR3" and "FB-DIMM"
	  (DMI type 17).
	* dmidecode.c: Add cache associativity types "12-way Set-associative",
	  "24-way Set-associative", "32-way Set-associative",
	  "48-way Set-associative" and "64-way Set-associative" (DMI type 7).

2009-07-27  Jean Delvare  <khali@linux-fr.org>

	* dmioem.c: Recognize "Hewlett-Packard" as a possible DMI vendor
	  string for HP. Orginal patch from Thomas Hiller (HP).
	* dmidecode.c: Add processor upgrade type "Socket LGA1366"
	  (DMI type 4).

2009-06-19  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix decoding of memory array capacity. A maximum
	  capacity of 128 GB would erroneously be reported as Unknown,
	  while a unknown capacity would be erroneously reported as 2048
	  GB. Bug reported by Lin Li (HP).
